<resources>
    <string name="app_name">S3rviApp</string>
    <string name="menu2">Menu</string>
    <string name="inicio3">Inicio</string>
    <string name="perfil3">Perfil</string>
    <string name="favorito3">Favorito</string>
    <string name="loading">Cargando</string>
    <string name="bienvenido">Bienvenido</string>

    <string name="facebook_application_id" translatable="false">3052092074810930</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb3052092074810930</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar3">Buscar</string>
    <string name="acerca_de">Acerca de</string>
    <string name="google_status_fmt">Nombre: %s</string>
    <string name="firebase_status_fmt">Correo: %s</string>
    <string name="signed_out">Selecciona Google</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Inicio de sesion</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="trabajo_app">Quiero ser aliado </string>
    <string name="detalle_app">Una herramienta innovadora y a la vez sencilla que permite crear, gestionar y acceder a servicios domiciliaros desde los servicios generales, el mantenimiento y reparación de electrodomésticos hasta asesorías profesionales de su micronegocio.</string>
    <string name="terminosCon"><u>ACEPTAR TERMINOS Y CONDICIONES</u></string>
</resources>
