<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".Login"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">



        <ImageView
            android:padding="5dp"
            android:id="@+id/googleIcon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="23mm"
            android:layout_height="23mm"
            android:contentDescription="@string/desc_firebase_lockup"
            android:scrollbarTrackVertical="@drawable/bottom_perfil"
            android:src="@drawable/persona" />

        <TextView
            android:id="@+id/textInicioSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/google_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc" />


        <TextView
            android:id="@+id/ciudad3"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="ciudad" />
        <TextView
            android:id="@+id/servicio3"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Servicio: Mantenimiento de labadoras" />
        <TextView
            android:id="@+id/telefono3"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Telefono: 320239293" />

        <Switch
            android:id="@+id/mostrarEnLista"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="Mostrarte" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone" />


    </LinearLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/conten_barra_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radio"
        android:visibility="visible"
        tools:visibility="gone">


        <LinearLayout
            android:id="@+id/signOutAndDisconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/aliado_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:text="@string/trabajo_app"
                android:theme="@style/ThemeOverlay.MyDarkButton" />


            <Button
                android:id="@+id/signOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />


        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>